# movie-asset-pipeline-2026-prestudy

./: .gitignore  .gitmodules  AGENTS.md  GEMINI.md  MASTER_IMPLEMENTATION_PLAN_2026.md  README.md  implementation_plan.md  pipeline_runner.py  setup.cfg  technical_architecture.md
.agent/: task.md
docs/: architecture_vision_2026.md  arp_mechanism_design.md  digital_asset_pipeline_design.md  digital_asset_pipeline_sop.md  digital_asset_taxonomy.md  gbt_36369_visualization.md  gbt_standard.txt  manuscript_final.md  manuscript_v2_supply_chain.md  phase_7_summary.md  pipeline_visualization.html  system_design_rationale.md  technical_roadmap.md  trellis2_installation_checklist.md  trellis2_installation_final_report.md  trellis2_installation_issue.md
docs/architecture/: vision_asset_evolution.md
docs/archive/: expert_review_comments.md  implementation_plan.md  project_proposal.md
docs/guidelines/: AGENTS.md
docs/major_project_scheme/: 00_master_outline.md  FULL_MAJOR_PROJECT_SCHEME.md
movie_asset_3dgs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: analyze_exr_batch.py  check_import.py  convert_glb_to_gs.py  detect_motion_segments.py  download_trellis.py  download_trellis2.py  env_check.py  export_rescaled_ply.py  extract_keyframes.py  install_cuda_12.2.sh  patch_trellis2_config.py  patch_trellis_config.py  project_3d_to_video.py  render_ply_video.py  run_gsplat_render.py  run_trellis2_api.py  run_trellis_api.py  setup_dust3r.sh  setup_nvidia_opt.sh  setup_sam3d_objects.md
tests/: test_cinema_utils.py
(+55 files in other folders)
