
[metadata]
name = movie_asset_3dgs
version = 0.1.0
description = Cinema 3DGS Assets Plugin
author = zhangxin

[options]
packages = find:
python_requires = >=3.10
install_requires =
    nerfstudio
    OpenEXR

[options.entry_points]
nerfstudio.dataparser_configs =
    cinema = movie_asset_3dgs.data.cinema_dataparser:cinema_dataparser
